Fixed the problem with the icons

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,4 +10,5 @@
 
 // Admin LTE
 @import "~admin-lte/dist/css/AdminLTE.min.css";
-@import "~admin-lte/dist/css/skins/_all-skins.min.css";
+@import "~admin-lte/dist/css/skins/skin-blue.css";
+@import "~font-awesome/scss/font-awesome";
