Finished crud to companie's table

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,9 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
+// Datatables
+@import "~datatables.net-bs/css/dataTables.bootstrap.min.css";
+
 // Admin LTE
 @import "~admin-lte/dist/css/AdminLTE.min.css";
 @import "~admin-lte/dist/css/skins/skin-blue.css";
